B 1.0.0 20180913001 B [首頁] patch路徑瀏覽後未顯示在欄位上; B [首頁] 初次新增的公司別無法瀏覽patch路徑 F [首頁] 切換前增加控卡 B [新增公司別] 儲存後自動選擇新增的公司別

--- a/src/view/MainPage.form
+++ b/src/view/MainPage.form
@@ -514,7 +514,7 @@
                             <Property name="selectionMode" type="int" value="1"/>
                           </Properties>
                           <Events>
-                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jBossListMouseClicked"/>
+                            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jBossListMousePressed"/>
                           </Events>
                           <AuxValues>
                             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
