F 1.0.0.2018100902 F [首頁] Jboss清單增加開啟Log路徑

--- a/src/controller/MainPage.form
+++ b/src/controller/MainPage.form
@@ -75,6 +75,14 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="switchItemActionPerformed"/>
           </Events>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="openLog">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&#x958b;&#x555f;Log&#x8def;&#x5f91;"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="openLogActionPerformed"/>
+          </Events>
+        </MenuItem>
       </SubComponents>
     </Container>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
